# call-me-maybe

./: Makefile  bulk_update_issue.py  pyproject.toml
.github/issue-plans/call-me-maybe/: issues.yaml
.github/scripts/: sync_issues.py
.github/workflows/: sync-project-issues.yml
data/input/: example.json
docs/: architecture.md
src/: schema_manager.py
src/call_me_maybe/: __main__.py  errors.py  llm_adapter.py  models.py  normalizer.py  parser.py  schema_manager.py  utils.py
tests/: test_normalizer.py  test_parse.py
