[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Foundation scaffold for call_me_maybe"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
