[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Foundation scaffold for call_me_maybe"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.12.0",
    "pydantic>=2.13.3",
    "torch<2.1",
    "transformers>=5.6.2",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
